refactor: implement uuids in menu and add support for combos